# galvanize-agents

./: .env.example  .gitignore  Galvanize_Audience_Intelligence_Report (1).docx  README.md  SETUP.md  pyproject.toml
knowledge/: consumption_habits.md  implementation.md  market_context.md  strategy_matrix.md
knowledge/segments/: cdes.md  community_leaders.md  developers.md  investors.md
src/galvanize/: __init__.py  cli.py  config.py
src/galvanize/agents/: __init__.py  analyzer.py  classifier.py  policy_monitor.py  strategist.py  writer.py
src/galvanize/crews/: __init__.py  analyze.py  content_planning.py  lead_classify.py  market_intel.py
src/galvanize/tools/: __init__.py  web_search.py
tests/: __init__.py  test_crews.py
